# yt-dlp-video-transcripts

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
scripts/: channel_transcripts.py
tests/: conftest.py  test_disk_and_resume.py  test_dry_run.py  test_format.py  test_hardening.py  test_helpers.py  test_languages.py  test_manual_only.py  test_metadata_only.py  test_polish.py  test_subtitles.py  test_timestamps.py
