[project]
name = "youtube-channel-transcripts"
version = "1.1.0"
description = "Download English YouTube subtitles/transcripts and save them as txt/md files."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "yt-dlp",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]
